--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: url("background.jpeg") no-repeat center center fixed;
+  background: url("background1.jpeg") no-repeat center center fixed;
   background-size: cover;
   color: #fff;
 }
